resources/tests/invalid_syntax/var_read.ct
//`Variable of name 'a' does not exist!
//1
fn hello()->void {
  return a;
}